# week

./: LICENSE  README.md
.github/workflows/: Release.yml  build.yml  release.yml  releasing.yml  rust.yml
week/: Cargo.toml
week/src/: lib.rs  main.rs
week/tests/: cli.rs  cli_tests.rs
