[package]
name = "week"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive"] }
anyhow = "1.0.80"
regex = "1.10.3"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"


