[package]
name = "week"
version = "0.1.1"
edition = "2021"
rust-version = "1.70"
authors = ["Billy Tobon <billy.tobonl@gmail.com>"]
description = "Simple CLI to get the ISO week number for a given date"
repository = "https://github.com/billyto/week"
license = "MIT"
readme = "README.md"
keywords = ["cli", "date", "week", "calendar", "iso"]
categories = ["command-line-utilities", "date-and-time"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#TODO: update dependencies?

[dependencies]
chrono = "0.4.34"
clap = { version = "=4.4.18", features = ["derive"] }
anyhow = "1.0.80"
regex = "1.10.3"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"


