[package]
name = "week"
version = "0.1.1"
edition = "2021"
rust-version = "1.70"
authors = ["Billy Tobon <billy.tobonl@gmail.com>"]
description = "Simple CLI to get the ISO week number for a given date"
repository = "https://github.com/billyto/week"
license = "MIT"
readme = "README.md"
keywords = ["cli", "date", "week", "calendar", "iso"]
categories = ["command-line-utilities", "date-and-time"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
chrono = "0.4.41"
clap = { version = "=4.5.40", features = ["derive"] }
anyhow = "1.0.98"
regex = "1.11.1"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"


